<resources>

    <string name="app_name">FastMark</string>
    <string name="warning_title">注意</string>
    <string name="warning_msg_length_mismatch">輸入的長度不正確</string>
    <string name="warning_confirm">好</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_done">完成</string>
    <string name="btn_clear">清除</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_0">0</string>
    <string name="btn_9">9</string>
    <string name="pref_settings">設定</string>
    <string name="pref_url">網址</string>
    <string name="pref_base_url">基本網址</string>
    <string name="pref_base_url_summary">設定基本的網址，所有輸入的數字都會接在此網址之後</string>
    <string name="default_base_url">http://tw.stock.yahoo.com/q/q?s=</string>
    <string name="pref_reset_url">重設基本網址</string>
    <string name="pref_reset_url_summary">基本網址重新設定為預設值</string>
</resources>
