
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/top_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/displayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_medium"
	    style="@style/display_text"
            android:inputType="number" >
        </TextView>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_widget"
        android:stretchColumns="0, 1, 2" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button01"
		android:onClick="onClickNum"
		style="@style/btn_text"
		android:tag="1"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/button02"
		android:onClick="onClickNum"
		style="@style/btn_text"
		android:tag="2"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/button03"
		android:onClick="onClickNum"
		style="@style/btn_text"
		android:tag="3"
                android:text="@string/btn_3" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium" >

            <Button
                android:id="@+id/button04"
		style="@style/btn_text"
		android:tag="4"
		android:onClick="onClickNum"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/button05"
		android:onClick="onClickNum"
		style="@style/btn_text"
		android:tag="5"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/button06"
		android:onClick="onClickNum"
		style="@style/btn_text"
		android:tag="6"
                android:text="@string/btn_6" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium" >

            <Button
                android:id="@+id/button_07"
		android:onClick="onClickNum"
		style="@style/btn_text"
		android:tag="7"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/button_08"
		android:onClick="onClickNum"
		style="@style/btn_text"
		android:tag="8"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/button_09"
		android:onClick="onClickNum"
		style="@style/btn_text"
		android:tag="9"
                android:text="@string/btn_9" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium" >

            <Button
                android:id="@+id/button00"
		android:onClick="onClickNum"
		style="@style/btn_text"
		android:tag="0"
                android:layout_weight="1"
                android:text="@string/btn_0" />

            <Button
                android:id="@+id/button_clear"
		style="@style/btn_text"
                android:layout_weight="2"
                android:text="@string/btn_clear" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tableLayout1"
        android:layout_marginTop="38dp"
	style="@style/btn_text"
	android:text="@string/btn_done" />

</RelativeLayout>
